--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,58 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 .Ael {
-    width: 100%;
-    height: 100vh;
-    padding: 25px;
-    display: flex;
-    align-items: center;
+  width: 100%;
+  height: 100vh;
+  padding: 25px;
+  display: flex;
+  align-items: center;
+}
+nav {
+  width: 89.5%;
+  margin-left:23px ;
+  background-color:  rgb(223, 222, 220);
+}
+.ul {
+  width: 30%;
+  height: 5vh;
+  margin-left: 50px !important ;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.select{
+  width: 270px !important;
+  padding: 15px;
+}
+.demand-table{
+  width: 89.6%;
+  margin-left: 23px;
+}
+.demand-btn{
+  position: absolute;
+  right: 10%;
+  top: 7%;
+  /* background-color: rgb(148, 148, 252); */
+  width: 100px;
+  text-align: center;
+  padding: 10px;
+  color: white;
+  border-radius: 10px;
+}
+@media screen and (max-width: 1000px) {
+  .Ael {
+    height: auto;
+  }
+}
+@media screen and (max-width: 520px) {
+  .Ael {
+    margin-bottom: 100px;
+  }
 }
