--- a/src/style/sidefilters.css
+++ b/src/style/sidefilters.css
@@ -1,8 +1,9 @@
 .sidefilters {
   width: 17%;
-  height: 100%;
+  height: 95vh;
   background-color: rgb(223, 222, 220);
   border: 2px solid rgb(193, 186, 186);
+  overflow: scroll;
 }
 .filterhead {
   width: 90%;
@@ -13,21 +14,60 @@
   font-weight: bolder;
   font-size: 20px;
 }
-.search{
-    display: block;
-    position: relative;
+.search {
+  display: block;
+  position: relative;
 }
-.search input{
-    font-size: 19px;
-    color: rgb(121, 121, 115);
-    font-weight: 500;
+.search input {
+  font-size: 19px;
+  color: rgb(121, 121, 115);
+  font-weight: 500;
 }
-.search .icon{
+.search .icon {
+  position: absolute;
+  top: 28%;
+  left: 10%;
+  font-size: 24px;
+  color: rgb(107, 107, 206);
+}
+.hamburger {
+  position: absolute;
+  left: 7%;
+  top: 0.5%;
+  z-index: 200;
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+  .sidefilters {
+    height: 105vh;
+  }
+}
+@media screen and (max-width: 820px) {
+  .sidefilters {
+    width: 30%;
+  }
+}
+@media screen and (max-width: 520px) {
+  .showfilter {
+    width: 50%;
+    position: fixed;
+    /* display: none; */
+    z-index: 200;
+    top: 2.6%;
+    left: 0%;
+    overflow: scroll;
+    padding-bottom:60px ;
+  }
+  .hidefilters{
+    width: 50%;
     position: absolute;
-    top: 28% ;
-    left: 10%;
-    font-size: 24px;
-    color: rgb(107, 107, 206);
+    display: none;
+    /* left: -40%; */
+    z-index: 200;
+  }
+  .hamburger{
+    display: block;
+    position: fixed;
+  }
 }
-
-
