--- a/src/App.css
+++ b/src/App.css
@@ -14,33 +14,38 @@
   align-items: center;
 }
 nav {
-  width: 89.5%;
-  margin-left:23px ;
-  background-color:  rgb(223, 222, 220);
+  width: 100%;
+  /* margin-left:23px ; */
+  background-color: rgb(223, 222, 220);
 }
 .ul {
   width: 30%;
-  height: 5vh;
+  height: 7vh;
   margin-left: 50px !important ;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
 }
-.select{
+.ul li:hover {
+  background-color: rgb(139, 136, 136);
+  padding: 1px 6px;
+  color: white;
+}
+.select {
   width: 270px !important;
   padding: 15px;
 }
-.demand-table{
+.demand-table {
   width: 89.6%;
   margin-left: 23px;
 }
-.demand-btn{
+.demand-btn {
   position: absolute;
-  right: 10%;
-  top: 7%;
+  right: 8%;
+  top: 8%;
   /* background-color: rgb(148, 148, 252); */
-  width: 100px;
+  width: 70px;
   text-align: center;
   padding: 10px;
   color: white;
