--- a/src/style/sidefilters.css
+++ b/src/style/sidefilters.css
@@ -14,6 +14,9 @@
   font-weight: bolder;
   font-size: 20px;
 }
+.filterhead  h1{
+  font-size: 16px;
+}
 .search {
   display: block;
   position: relative;
