--- a/src/style/mainComp.css
+++ b/src/style/mainComp.css
@@ -11,10 +11,12 @@
 .demandpost,.sellingpost {
   border: 2.2px solid rgb(140, 135, 135);
   margin-left: 20px;
-  margin-top: 30px;
+  /* margin-top: 70px; */
   background-color: rgb(223, 222, 220);
   width: 90%;
   /* margin-right: auto; */
+  margin-top: 30px !important;
+
 }
 .demandpost form {
   width: 100%;
